--- a/W3-root-finding.ipynb
+++ b/W3-root-finding.ipynb
@@ -30,8 +30,323 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "34b176b5-cead-460a-a925-e5455d82ffe8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "binary_search"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "binary_search function. Given a low and high limit of an interval and a scoring function,\n",
+    "find an interval of width no more than 10^(-10) that contains the desired number.\n",
+    "Test function, not complete yet.\n",
+    "\"\"\"\n",
+    "function binary_search(score_f, low, high)\n",
+    "    found = false\n",
+    "    mid = (low + high)/2\n",
+    "    score = score_f(mid)\n",
+    "    if score == 1\n",
+    "        high = mid\n",
+    "    elseif score == -1\n",
+    "        low = mid\n",
+    "    elseif score == 0\n",
+    "        found = true\n",
+    "    end\n",
+    "    low, high, found\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8897bc2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "score_f (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score_f(x) = sign(x^2 - 2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3c17c3e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(43.75, 46.875, false)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search(score_f, 43.75, 50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb7be7fe",
+   "metadata": {},
+   "source": [
+    "let's add the loop now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "edf24926",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "binary_search (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function binary_search(score_f, low, high)\n",
+    "    found = false\n",
+    "    for i in 1:40 \n",
+    "      mid = (low + high)/2\n",
+    "      score = score_f(mid)\n",
+    "      if score == 1\n",
+    "        high = mid\n",
+    "      elseif score == -1\n",
+    "        low = mid\n",
+    "      elseif score == 0\n",
+    "        found = true\n",
+    "        end # end if\n",
+    "    end # end loop\n",
+    "    low, high, found\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "63e71e6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(44.72135954993064, 44.72135955002159, false)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search(score_f, 0, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9743163e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44.721359549995796"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sqrt(2000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19e9ae20",
+   "metadata": {},
+   "source": [
+    "Modify this code to work with a different scoring function. We will simply evaluate the function at the given point."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "83cc3bc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "score_f (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score_f(x) = x^2 - 2000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "30c884db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "binary_search (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function binary_search(score_f, low, high)\n",
+    "    found = false\n",
+    "    for i in 1:40 \n",
+    "      mid = (low + high)/2\n",
+    "      score = score_f(mid)\n",
+    "      if score > 0 \n",
+    "        high = mid\n",
+    "      elseif score < 0\n",
+    "        low = mid\n",
+    "      elseif score == 0\n",
+    "        found = true\n",
+    "        end # end if\n",
+    "    end # end loop\n",
+    "    low, high, found\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8c99033c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(44.72135954993064, 44.72135955002159, false)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search(score_f, 0, 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "270fc69e",
+   "metadata": {},
+   "source": [
+    "Try the secant approximation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "fc10affb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "binary_search (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function binary_search(score_f, low, high)\n",
+    "    found = false\n",
+    "    for i in 1:40 \n",
+    "      slope = (score_f(high) - score_f(low))/(high-low)\n",
+    "      mid = low - score_f(low) / slope\n",
+    "      score = score_f(mid)\n",
+    "      if score > 0 \n",
+    "        high = mid\n",
+    "      elseif score < 0\n",
+    "        low = mid\n",
+    "      elseif score == 0\n",
+    "        found = true\n",
+    "        end # end if\n",
+    "    end # end loop\n",
+    "    low, high, found\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7f58fae3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(44.72135954999579, 100, false)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binary_search(score_f, 0, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e117905",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -39,7 +354,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.0",
+   "display_name": "Julia 1.8.4",
    "language": "julia",
    "name": "julia-1.8"
   },
@@ -47,7 +362,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.0"
+   "version": "1.8.4"
   }
  },
  "nbformat": 4,
