--- a/W3-root-finding.ipynb
+++ b/W3-root-finding.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "83cc3bc7",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "score_f (generic function with 1 method)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "fc10affb",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
        "binary_search (generic function with 1 method)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,9 +314,12 @@
     "        high = mid\n",
     "      elseif score < 0\n",
     "        low = mid\n",
-    "      elseif score == 0\n",
+    "      elseif abs(score) < 1e-14\n",
     "        found = true\n",
-    "        end # end if\n",
+    "      end # end if\n",
+    "      if found\n",
+    "        break\n",
+    "      end\n",
     "    end # end loop\n",
     "    low, high, found\n",
     "end\n"
@@ -324,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "7f58fae3",
    "metadata": {},
    "outputs": [
@@ -334,7 +337,7 @@
        "(44.72135954999579, 100, false)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,9 +347,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a77e060d-7f4b-4a89-b5bf-9a0d12dbb165",
+   "metadata": {},
+   "source": [
+    "Notice a few things.\n",
+    "\n",
+    "* the upper limit never changed (think: why?)\n",
+    "* I get more accurate decimal places than with the previous algorithms\n",
+    "* I bet I can stop earlier. I've added a test to do that which we didn't develop in class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e117905",
+   "id": "d6c3683c-7ac1-4dc0-8923-ba92ce18fc40",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -362,7 +377,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.4"
+   "version": "1.8.5"
   }
  },
  "nbformat": 4,
