--- a/W3-root-finding.ipynb
+++ b/W3-root-finding.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "34b176b5-cead-460a-a925-e5455d82ffe8",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
        "binary_search"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "8897bc2f",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "score_f (generic function with 1 method)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "3c17c3e1",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
        "(43.75, 46.875, false)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "edf24926",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
        "binary_search (generic function with 1 method)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "63e71e6c",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "(44.72135954993064, 44.72135955002159, false)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "9743163e",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "44.721359549995796"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "83cc3bc7",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "score_f (generic function with 1 method)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "30c884db",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "binary_search (generic function with 1 method)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "8c99033c",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
        "(44.72135954993064, 44.72135955002159, false)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "fc10affb",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
        "binary_search (generic function with 1 method)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,38 +306,42 @@
    "source": [
     "function binary_search(score_f, low, high)\n",
     "    found = false\n",
-    "    for i in 1:40 \n",
+    "    n = 0\n",
+    "    mid = 0.0\n",
+    "    while n < 40 \n",
     "      slope = (score_f(high) - score_f(low))/(high-low)\n",
     "      mid = low - score_f(low) / slope\n",
     "      score = score_f(mid)\n",
+    "      n = n + 1\n",
     "      if score > 0 \n",
     "        high = mid\n",
     "      elseif score < 0\n",
     "        low = mid\n",
-    "      elseif abs(score) < 1e-14\n",
+    "      end\n",
+    "      if abs(score) < 1e-14\n",
     "        found = true\n",
     "      end # end if\n",
-    "      if found\n",
+    "      if found || (abs(high-low) < 1e-14)\n",
     "        break\n",
     "      end\n",
     "    end # end loop\n",
-    "    low, high, found\n",
+    "    mid, low, high, found, n\n",
     "end\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "7f58fae3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(44.72135954999579, 100, false)"
+       "(44.72135954999579, 44.72135954999579, 100, false, 40)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,13 +359,61 @@
     "\n",
     "* the upper limit never changed (think: why?)\n",
     "* I get more accurate decimal places than with the previous algorithms\n",
-    "* I bet I can stop earlier. I've added a test to do that which we didn't develop in class"
+    "* I bet I can stop earlier. I've added a test to do that which we didn't develop in class. This revealed a bug in the \"if\" statement, requiring me to split it into two different if statements.\n",
+    "* mid is out good estimate of the best guess, so I provide that too (the computer doesn't tell you if high or low is the best estimate)\n",
+    "* to allow me to count the number of iterations, I've changed the \"for\" loop to a \"while\" loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d6c3683c-7ac1-4dc0-8923-ba92ce18fc40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.4142135623730936, 1.4142135623730936, 2, true, 20)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# adapt to find the squareroot of 2\n",
+    "binary_search( x -> x^2 - 2, 0, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "644367c0-bd40-459b-a967-24a64608131c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3.141592653589793, 3.14163548417209, 3.141592653589793, true, 6), 3.141592653589793)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# adapt to find pi using sin(x) -- a bit silly, but it can be done\n",
+    "# notice low and high both change this time. Why?\n",
+    "# notice that very few iterations are required\n",
+    "binary_search(sin, 2, 5), float(pi)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6c3683c-7ac1-4dc0-8923-ba92ce18fc40",
+   "id": "712fc8f4-1bad-4e9c-9ee8-9867437acbfb",
    "metadata": {},
    "outputs": [],
    "source": []
