--- a/W4-topics.ipynb
+++ b/W4-topics.ipynb
@@ -21,13 +21,13 @@
    "source": [
     "## Condition number\n",
     "\n",
-    "Write $\\tilde x = x + h$ for the floating point value of $x$. If $x$ is a root, then $f(x) = \\epsilon$ where $|\\epsilon|$ is small but in general not exactly 0.\n",
+    "Write $\\tilde x = x + h$ for the floating point value of $x$. If $x$ is a root, then we can usually only evaluate $f(\\tilde x) = \\epsilon$ where $|\\epsilon|$ is small but in general not exactly 0.\n",
     "\n",
     "Use Taylor's theorem to estimate a relationship between $h$ and $\\epsilon$:\n",
     "\n",
-    "$f(x+h) = \\epsilon$ so $f(x) + hf'(x) = \\epsilon$. \n",
+    "$f(x+h) = \\epsilon$ so $f(x) + hf'(x) \\approx \\epsilon$. \n",
     "\n",
-    "The condition number of the root finding problem is the relative error in the root ($x$) divided by the relative error in $f(x)$. That's $h/\\epsilon$. Using $f(x) = 0$ and rearranging we obtain $\\kappa = | \\frac{h}{\\epsilon} | =  \\frac{1}{f'(x)}$. If the derivative of $f$ is 0 at the root, the condition number is $\\infty$.\n",
+    "The condition number of the root finding problem is the relative error in the root ($x$) divided by the relative error in $f(x)$. That's $h/\\epsilon$. Using $f(x) = 0$ and rearranging we obtain $\\kappa = | \\frac{h}{\\epsilon} | =  |\\frac{1}{f'(x)}|$. If the derivative of $f$ is 0 at the root, the condition number is $\\infty$.\n",
     "\n",
     "This means, for example, that functions with double roots may be challenging as the derivative will be zero at the root. Think of $(x-1)^2$.\n",
     "\n",
@@ -51,7 +51,7 @@
     "    \n",
     "$$x_1= x_0 - \\frac{f(x_0)}{f'(x_0)}.$$\n",
     "\n",
-    "Clearly we need to know $f'$ and it better not be $0$ any where we evaluate it."
+    "Clearly we need to know $f'$ and it better not be $0$ anywhere we evaluate it."
    ]
   },
   {
@@ -61,7 +61,7 @@
    "source": [
     "## Write your own Newton's method.\n",
     "\n",
-    "Follow the steps in class. Think. English. Julia. Small steps. Test.\n",
+    "Follow the steps in class: Think. English. Julia. Small steps. Test.\n",
     "\n",
     "Input data: $f$, $f'$, $x_0$.\n",
     "\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "c58d6e65-040b-407f-8351-daee605abc61",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        "my_newton (generic function with 1 method)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
     "    x1 = 0.0\n",
     "    for i in 1:20\n",
     "        x1 = x0 - f(x0)/df(x0)\n",
-    "        if (abs(x1-x0) < tolerance) || abs(f(x1)) < tolerance\n",
+    "        if (abs(x1-x0) < tolerance) || (abs(f(x1)) < tolerance)\n",
     "            break\n",
     "        end\n",
     "        x0 = x1\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "99daa269-18db-4b90-b7f3-b2b15fd38e80",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "2.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "b8a89dbc-9521-4a1b-8c5b-54ec1eac92c8",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "1.4142135623730951"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "c2d4361d-c787-4d0b-a8c1-b56f5ed01d8e",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "1.4142135623730951"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "id": "16d0615a-f954-4b7c-af22-d1a3195ed8ab",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "my_newton2 (generic function with 1 method)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
     "    for i in 1:20\n",
     "        x1 = x0 - f(x0)/df(x0)\n",
     "        push!(sequence, x1)\n",
-    "        if (abs(x1-x0) < tolerance) || abs(f(x1)) < tolerance\n",
+    "        if (abs(x1-x0) < tolerance) || (abs(f(x1)) < tolerance)\n",
     "            break\n",
     "        end\n",
     "        x0 = x1\n",
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "b087b666-e2b9-4dca-a824-b3dd3cca7f7f",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        " 1.4142135623730951"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "id": "b451036e-ea03-4b58-8148-8e58d8d61579",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
        " 0.0"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "id": "bf4b6c47-fbb9-43d0-b46a-b6e710d67115",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        " Inf"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "id": "55ee2ffe-266b-4898-9f6a-ad5088815728",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
        " 1.414213562373095048801688724209698078569671875376948073176679737990732478462102"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "id": "8db65f84-2409-43b5-97a9-9435f4929cf5",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
        " Inf"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,9 +408,9 @@
     "\n",
     "If $\\sigma<1$ the convergence is linear and the rate is $\\sigma$. \n",
     "\n",
-    "Numerically, you can't compute a limit, and eventually limits on precision will cause errors in arithmetic to dominate the estimate of the limit. In practice we evaluate the limit by observing a few elements of the series.\n",
+    "Numerically, you can't compute a limit and eventually limits on precision will cause errors in arithmetic to dominate the estimate of the limit. In practice we evaluate the limit by observing a few elements of the series.\n",
     "\n",
-    "There is a condition (Lipshitz, related to differentiability) which will guarantee convergence. This is one of many versions of the [fixed point theorem](https://mathworld.wolfram.com/FixedPointTheorem.html) ([more](https://en.wikipedia.org/wiki/Fixed-point_theorems)).\n",
+    "There is a condition ([Lipshitz](https://mathworld.wolfram.com/LipschitzCondition.html), related to differentiability) which will guarantee convergence. This is one of many versions of the [fixed point theorem](https://mathworld.wolfram.com/FixedPointTheorem.html) ([more](https://en.wikipedia.org/wiki/Fixed-point_theorems)).\n",
     "\n"
    ]
   },
@@ -472,13 +472,25 @@
    "source": [
     "## More great stuff\n",
     "\n",
-    "Not discussed in the class: Quasi-Newton and Non-linear least squares (sections 4.6, 4.7)"
+    "Not discussed in the class: Quasi-Newton and Non-linear least squares (sections 4.6, 4.7)\n",
+    "\n",
+    "Some methods combine features of more than one of these methods: for example use interpolation (secant) or Newton with a starting value to find a bracket, then keep the bracket by carefully updating it.\n",
+    "\n",
+    "The finite difference methods for the Jacobian and derivative (single variable) are often replaced with \"automatic\" differentiation; we will return to this in the next chapter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d6a0808",
+   "metadata": {},
+   "source": [
+    "One more root finding topic to come: interval arithmetic and root finding. This material is not in the textbook."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8fdb8cf-4697-49d9-8eeb-bf2d89798e3c",
+   "id": "b7d05b43",
    "metadata": {},
    "outputs": [],
    "source": []
