--- a/W4-topics.ipynb
+++ b/W4-topics.ipynb
@@ -123,7 +123,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "id": "bc904d0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4142135623730951"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f(x) = x^2 -2.0\n",
+    "df(x) = 2*x\n",
+    "my_newton(f, df, 1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "b8a89dbc-9521-4a1b-8c5b-54ec1eac92c8",
    "metadata": {},
    "outputs": [
@@ -133,7 +156,7 @@
        "1.4142135623730951"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "c2d4361d-c787-4d0b-a8c1-b56f5ed01d8e",
    "metadata": {},
    "outputs": [
@@ -154,7 +177,7 @@
        "1.4142135623730951"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "f31a0869-0caa-4e9a-8c59-b2ff1a9156bf",
    "metadata": {},
    "outputs": [
@@ -175,7 +198,7 @@
        "1.2599210498948732"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "9323b639-f692-483b-9eb6-77e1d7a79231",
    "metadata": {},
    "outputs": [
@@ -196,7 +219,7 @@
        "1.2599210498948732"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "16d0615a-f954-4b7c-af22-d1a3195ed8ab",
    "metadata": {},
    "outputs": [
@@ -225,7 +248,7 @@
        "my_newton2 (generic function with 1 method)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "b087b666-e2b9-4dca-a824-b3dd3cca7f7f",
    "metadata": {},
    "outputs": [
@@ -263,7 +286,7 @@
        " 1.4142135623730951"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,6 +406,48 @@
    ],
    "source": [
     "@. -log10(abs(s - sqrt(BigFloat(2.0))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4b701d3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21-element Vector{BigFloat}:\n",
+       " 1.0000009999999999177333620536956004798412322998046875\n",
+       " 1.00000049999999995886668102684780023992061614990234375\n",
+       " 1.000000249999999979433340513423900119960308074951171875\n",
+       " 1.0000001249999999897166702567119500599801540374755859375\n",
+       " 1.00000006249999999485833512835597502999007701873779296875\n",
+       " 1.000000031249999997429167564177987514995038509368896484375\n",
+       " 1.0000000156249999987145837820889937574975192546844482421875\n",
+       " 1.00000000781249999935729189104449687874875962734222412109375\n",
+       " 1.000000003906249999678645945522248439374379813671112060546875\n",
+       " 1.0000000019531249998393229727611242196871899068355560302734375\n",
+       " 1.00000000097656249991966148638056210984359495341777801513671875\n",
+       " 1.000000000488281249959830743190281054921797476708889007568359375\n",
+       " 1.0000000002441406249799153715951405274608987383544445037841796875\n",
+       " 1.00000000012207031248995768579757026373044936917722225189208984375\n",
+       " 1.000000000061035156244978842898785131865224684588611125946044921875\n",
+       " 1.0000000000305175781224894214493925659326123422943055629730224609375\n",
+       " 1.00000000001525878906124471072469628296630617114715278148651123046875\n",
+       " 1.000000000007629394530622355362348141483153085573576390743255615234375\n",
+       " 1.0000000000038146972653111776811740707415765427867881953716278076171875\n",
+       " 1.00000000000190734863265558884058703537078827139339409768581390380859375\n",
+       " 1.000000000000953674316327794420293517685394135696697048842906951904296875"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = my_newton2(x -> (x-1)^2, x -> 2*(x-1), BigFloat(1.000001), tolerance = 1e-50)"
    ]
   },
   {
