--- a/W5-interval-arithmetic.ipynb
+++ b/W5-interval-arithmetic.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
        " Root([-2.46461e-08, 3.42811e-08], :unknown)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1494,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1510,7 @@
        "2.327232110413813"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1799,6 +1799,70 @@
    "source": [
     "using NLsolve\n",
     "s = nlsolve(f, [1.0], ftol=1e-14, method = :newton)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What happens with our Newton? Use \"ForwardDiff\" to compute a derivative. (Coming in a couple of weeks.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mMaximum number of iterations reached.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Main In[1]:15\u001b[39m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "40-element Vector{Float64}:\n",
+       "   1.0\n",
+       "  -0.019108280254777066\n",
+       "  21.428234706896866\n",
+       "  10.68974393599107\n",
+       "   5.296485489654395\n",
+       "   2.5517364330116945\n",
+       "   1.0797076971859747\n",
+       "   0.05495921926466796\n",
+       " -10.128973553621044\n",
+       "  -5.013215932032739\n",
+       "  -2.4037107495472316\n",
+       "  -0.9885439844579018\n",
+       "   0.021045066060637607\n",
+       "   ⋮\n",
+       "  -0.4576634705935583\n",
+       "   0.8764629113947979\n",
+       "  -0.15052080528796807\n",
+       "   3.2143835252623143\n",
+       "   1.4500999806260233\n",
+       "   0.42269062747725505\n",
+       "  -1.0096706423520614\n",
+       "  -0.0002202099596662066\n",
+       " 103.66231080497626\n",
+       "  51.82601731038811\n",
+       "  25.902817461651168\n",
+       "  12.931195639869857"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "using ForwardDiff\n",
+    "D(x) = ForwardDiff.derivative(f,float(x))\n",
+    "# f(1.0), D(1.0) # example calculation of function and derivative\n",
+    "newton(f, D, 1.0) # hopelessly lost"
    ]
   },
   {
